# tree-sitter-smithy

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
bindings/c/: tree-sitter-smithy.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_smithy/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterSmithy/: smithy.h
examples/: 03-defining-resources.smithy  04-defining-operations.smithy  05-listing-resources.smithy  06-non-lifecycle-operations.smithy
queries/: highlights.scm
script/: known_failures.txt  parse-examples
src/: grammar.json  node-types.json  parser.c
test/corpus/: document_structs.txt
